@@ -144,10 +144,9 @@
     <string name="settings_remote_sync_test_failed_message_wrong_address">Wrong address or wrong username/password specified.</string>
     <string name="settings_remote_sync_test_failed_message_newer_version">Collect Server runs version %s and it\'s not compatible with the one supported by this version of Collect Mobile (%s).\n\nPlease consider updating Collect Mobile to the latest version.</string>
 
+    <string name="select_survey_to_import">"Select survey to import"</string>
     <string name="import_title_failed">Failed to import survey %1$s</string>
-    <string name="import_text_failed">Make sure you are running the latest version of Collect Mobile and have exported
-        your survey for Collect Mobile using a recent Collect Server version.
-    </string>
+    <string name="import_text_failed">Failed to import survey: %s</string>
     <string name="import_text_wrong_version">Survey design exported with Collect version %s but this version of Collect Mobile supports survey designs generated with Collect up to version %s.\nPlease consider updating Collect Mobile to the latest version.</string>
     <string name="import_text_unsupported_file_type_selected">Please select a valid Collect Mobile survey file (.%s)</string>
 
